--- a/LogicAssetManager/Base.lproj/MainMenu.xib
+++ b/LogicAssetManager/Base.lproj/MainMenu.xib
@@ -1181,6 +1181,22 @@ yyyy</string>
                                                 <binding destination="fgo-zt-Eop" name="enabled" keyPath="canRemove" id="4ZR-GK-Pl7"/>
                                             </connections>
                                         </button>
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="e4Q-Y6-WgP">
+                                            <rect key="frame" x="248" y="10" width="411" height="14"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
+                                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Label" id="bgz-SQ-zMs">
+                                                <font key="font" metaFont="smallSystem"/>
+                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                            <connections>
+                                                <binding destination="fgo-zt-Eop" name="value" keyPath="selection.name" id="Fcg-v5-aG0">
+                                                    <dictionary key="options">
+                                                        <string key="NSNoSelectionPlaceholder">No Selection</string>
+                                                    </dictionary>
+                                                </binding>
+                                            </connections>
+                                        </textField>
                                     </subviews>
                                 </view>
                             </tabViewItem>
